--- a/css/style.css
+++ b/css/style.css
@@ -1386,6 +1386,16 @@ input:focus {
   .featured_slider {
     margin-top: 68px;
   }
+  .featured_slider_item {
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+  }
+  .featured_slider_item:hover {
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+  }
   .featured_all {
     margin-top: 20px;
   }
@@ -1798,6 +1808,15 @@ input:focus {
           box-sizing: border-box;
   position: relative;
   margin-top: 60px;
+  opacity: 0;
+}
+.testimonials.animation {
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeInDown;
+          animation-name: fadeInDown;
 }
 .testimonials h2 {
   text-align: center;
@@ -2173,6 +2192,7 @@ input:focus {
           box-sizing: border-box;
   position: relative;
   margin-top: 70px;
+  opacity: 0;
 }
 .blog h2 {
   font-family: "Source Sans Pro";
@@ -2344,6 +2364,14 @@ input:focus {
 }
 .blog .big_star {
   display: none;
+}
+.blog.animation {
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-name: fadeInDown;
+          animation-name: fadeInDown;
 }
 .blog.animation .small_star {
   -webkit-animation-iteration-count: infinite;
